--- a/react-music/src/components/Main.css
+++ b/react-music/src/components/Main.css
@@ -1,11 +1,30 @@
-/* img {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
-} */
+  padding-bottom: 2rem;
+}
 
-/* .image-container {
-  height: 10rem;
+.image-container img {
+  height: 40rem;
   width: auto;
-} */
+}
+
+.image-container-logo img {
+  height: 5rem;
+  width: auto;
+  margin-bottom: 2rem;
+}
+
+.searching-for {
+  display: grid;
+  padding: 0rem 1rem;
+  text-align: center;
+  font-style: italic;
+}
+
+.bio-button {
+  display: grid;
+  justify-content: center;
+  padding-bottom: 1.4rem;
+}
