Small Bug Fixes

--- a/react-music/src/components/Search.css
+++ b/react-music/src/components/Search.css
@@ -3,12 +3,21 @@
   grid-template-areas: "left search-bar right";
   grid-template-columns: 6rem 1fr 6rem;
   grid-template-rows: 4.5rem;
+  scroll-behavior: smooth;
 }
 
 .search-bar {
   display: grid;
   justify-content: center;
   align-content: center;
+  padding: 2rem;
+}
+.search-bar-left {
+  padding-left: 4rem;
+}
+
+.search-bar-right {
+  padding-right: 4rem;
 }
 
 .form {
