--- a/react-music/src/components/AlbumArt.css
+++ b/react-music/src/components/AlbumArt.css
@@ -1,7 +1,7 @@
 .auto-fit-column {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
-  grid-gap: 2.5rem;
+  grid-gap: 4.5rem;
 }
 
 li {
@@ -9,7 +9,7 @@ li {
 }
 
 h3 {
-  padding: 2rem;
+  /* padding: 2rem; */
   font-size: 2.4rem;
   font-weight: normal;
 }
