--- a/react-music/src/components/Header.css
+++ b/react-music/src/components/Header.css
@@ -8,8 +8,10 @@
 }
 
 .left-nav {
+  display: grid;
   grid-area: left-nav;
-  padding: 1.5rem;
+  justify-content: center;
+  align-content: center;
   background-color: rgb(61, 61, 61);
 }
 
@@ -25,7 +27,10 @@
 }
 
 .right-nav {
+  display: grid;
   grid-area: right-nav;
+  justify-content: center;
+  align-content: center;
   padding: 1.5rem;
   background-color: rgb(183, 183, 183);
 }
